--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ff2mm-website",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://feelfree2makemusic.nl",
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.0",
     "@lottiefiles/react-lottie-player": "3.4.7",
@@ -16,7 +17,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test --env=jsdom",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "deploy": "gh-pages -d build"
   },
   "engines": {
     "node": "18.x"
