--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.0",
     "@lottiefiles/react-lottie-player": "3.4.7",
+    "@sanity/client": "^6.7.1",
+    "@sanity/image-url": "^1.0.2",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
