--- a/SanityCMS/package.json
+++ b/SanityCMS/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/orderable-document-list": "^1.1.0",
     "@sanity/vision": "^3.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
